feat: Enhance Crime Branch network topology, 1st/2nd degree hops, Full Tab mode, case evidence dossier, and UI stability